--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sendgrid/mail": "^7.4.2",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "mongoose": "^5.11.13"
